@@ -1,3 +1,8 @@
+2006-11-30  Lev Bishop  <lev.bishop@gmail.com>
+
+	* libc/include/math.h: Allow C99 functions/macros to be
+	defined for C++ even when __STRICT_ANSI__.
+
 2006-11-29  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* libc/stdio/makebuf.c (__smakebuf): If dealing with
